# path-ai

./: Cargo.toml  README.md
src/: main.rs
src/path_ai/: config.rs  indexes.rs  mod.rs  path_ai.rs
src/utils/: chatgpt.rs  fs.rs  hash.rs  mod.rs  variables.rs
