[package]
name = "path-ai"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
tiktoken = "1.0.1"
sha2 = "0.10.8"
base64 = "0.21.7"
chrono = "0.4.31"